some progress with handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,12 +17,11 @@
       </h1>
       <nav>
         <a href="/">Home</a>
-        <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
         <a href="/dashboard">Dashboard</a> |
         <button class="no-button" id="logout">Sign Out</button>
         {{else}}
-        <a href="/signin">login</a>
+        <a href="/signin">Sign In</a>
         {{/if}}
       </nav>
     </header>
