--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,8 @@
 {{#each posts as |post| }}
-<div class="row mb-4 project">
+<div class="row mb-4 post">
   <div class="col-md-5">
     <h2>
-      <a href="/post/{{post.id}}">{{post.name}}</a>
+      <a href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
   </div>
   <div class="col-md-7">
