--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
 
   <!-- Render script for logged in users only -->
   {{#if logged_in}}
-  <script src="../../public/js/signout.js"></script>
+  <script src="/public/js/signout.js"></script>
   {{/if}}
 </body>
 
