--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,7 +1,7 @@
   <div class="col-md-6">
     <h2>Sign In</h2>
 
-    <form class="form login-form">
+    <form class="form signin-form">
       <div class="form-group">
         <label for="name-login">Name:</label>
         <input class="form-input" type="text" id="name-login" />
