--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,7 +7,22 @@
 <div>
     <button type="submit"><a href="/newpost" class="new-btn">New Post</a></button>
 </div>
+<br>
+<br>
 
-{{#each posts as |post|}}
+<h3>Current Posts:</h3>
 
-{{/each}}
+<div class="col-md-6 post-list">
+    {{#each posts as |post|}}
+    <div class="row mb-2">
+        <div class="col-md-8">
+        <h4><a href="/edit/{{post.id}}">{{post.title}}</a></h4>
+        </div>
+        <div class="col-md-4">
+        <button class="btn btn-sm btn-danger" type="click" data-id="{{post.id}}">DELETE</button>
+        </div>
+    </div>
+    {{/each}}
+</div>
+
+<script src="./js/dashboard.js"></script>
