update post working

--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -16,4 +16,6 @@
     </div>
 </form>
 
-<script src="./js/editpost.js"></script>
+<p hidden id="postId">{{post.id}}</p>
+
+<script src="/js/editpost.js"></script>
