--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -16,7 +16,7 @@
     {{#each posts as |post|}}
     <div class="row mb-2">
         <div class="col-md-8">
-        <h4><a href="/edit/{{post.id}}">{{post.title}}</a></h4>
+        <h4><a href="/editpost/{{post.id}}">{{post.title}}</a></h4>
         </div>
         <div class="col-md-4">
         <button class="btn btn-sm btn-danger" type="click" data-id="{{post.id}}">DELETE</button>
