--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -24,7 +24,7 @@
     </div>
     <br>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Save Post</button>
+        <button type="submit" class="btn btn-primary">Save Comment</button>
     </div>
 </form>
 </div>
