--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -14,6 +14,7 @@
         <button class="btn btn-primary" type="submit">Sign in</button>
       </div>
     </form>
+    <a href="/signup">Sign up here!</a>
   </div>
 
   <script src="./js/signin.js"></script>
