done coding maybe

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,7 +10,7 @@
       {{post.text}}
     </p>
     <p>
-        Created by: {{post.user.name}} at {{post.date_created}}.
+        Created by: {{post.user.name}} at {{format_date post.date_created}}.
     </p>
   </div>
 </div>
