--- a/views/editcomment.handlebars
+++ b/views/editcomment.handlebars
@@ -1,21 +1,16 @@
-<form class="edit-post-form">
-    <h2>Edit your post:</h2>
+<form class="edit-comment-form">
+    <h2>Edit your comment:</h2>
     <br>
     <div class="form-group">
-        <label for="post-title">Post Title:</label>
-        <input id="post-title" type="text" class="form-input" value="{{post.title}}" />
+        <label for="edit-comment">Comment:</label>
+        <input id="edit-comment" type="text" class="form-input" value="{{comment.text}}" />
     </div>
     <br>
     <div class="form-group">
-        <label for="post-text">Post Text:</label>
-        <textarea id="post-text" type="text" class="form-input">{{post.text}}</textarea>
-    </div>
-    <br>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Save Post</button>
+        <button type="submit" class="btn btn-primary">Save Comment</button>
     </div>
 </form>
 
-<p hidden id="postId">{{post.id}}</p>
+<p hidden id="commentId">{{comment.id}}</p>
 
 <script src="/js/editcomment.js"></script>
