fixed /newpost route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         <a href="/">Home</a>
         {{#if logged_in}}
         <a href="/dashboard">Dashboard</a> |
-        <button class="no-button" id="signout">SignOut</button>
+        <button class="btn btn-primary" id="signout">SignOut</button>
         {{else}}
         <a href="/signin">Sign In</a>
         {{/if}}
